# mini-spice

./: .gitignore  CMakeLists.txt  DESIGN.md  FEATURES_CN_V0.01.md  FEATURES_CN_V0.02.md  FEATURES_CPP.md  Makefile  README.md
include/: analysis.h  analysis.hpp  circuit.h  circuit.hpp  device.h  device.hpp  output.h  output.hpp  parser.h  parser.hpp  sparse.h  sparse.hpp  spice_types.h  spice_types.hpp
src/: main.c  main.cpp
src/analysis/: acan.c  acan.cpp  anareg.c  anareg.cpp  dcop.c  dcop.cpp  dcsweep.c  dcsweep.cpp  dctran.c  dctran.cpp  fourier.c  fourier.cpp  noise.c  noise.cpp  sens.c  sens.cpp
src/core/: circuit.c  circuit.cpp
src/devices/: behsrc.cpp  behsrchsrc.c  bjt.c  bjt.cpp  cap.c  cap.cpp  cccs.c  cccs.cpp  ccvs.c  ccvs.cpp  devreg.c  devreg.cpp  dio.c  dio.cpp  ind.c  ind.cpp  isrc.c  isrc.cpp  mos.c  mos.cpp  res.c  res.cpp  switch.c  switch.cpp  tline.c  tline.cpp  vccs.c  vccs.cpp  vcvs.c  vcvs.cpp  vsrc.c  vsrc.cpp
src/math/: sparse.c  sparse.cpp
src/output/: output.c  output.cpp
src/parser/: parser.c  parser.cpp
tests/: bjt_amp.net  dc_sweep.net  diode_clipper.net  fourier_test.net  ic_test.net  mos_amp.net  noise_test.net  options_test.net  param_test.net  pulse_source.net  rc_filter.net  rc_transient.net  sens_test.net  simple_rc.net  sin_source.net  voltage_divider.net
